# noc-control

./: agent_config.json  agent_config_template.json  client.pem  dev_install_mac.txt  install.sh  noc-agent.service  noc_agent.py  pyproject.toml  requirements.txt  update.sh
includes/: exceptions.py  iam_role_anywhere.py  magwell.py  msg_logger.py  vlc.py
libraries/: magwell.py  msg_logger.py  vlc.py
