[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "noc-agent"
version = "0.1.0"
description = "NOC Agent for TV control"
dependencies = [
    "pubnub>=7.0",      # For PubNub comms (uses httpx internally)
    "httpx>=0.27.0",    # HTTP client for PubNub (default handler)
    "urllib3>=2.2.0",   # For agent's REST calls to TV Controllers
]
requires-python = ">=3.12"