[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "noc-agent"
version = "0.1.0"
description = "Network Operations Center agent"
readme = "README.md"
requires-python = ">=3.8"

# Dependencies from requirements.txt
dependencies = [
    "python-dateutil",
    "urllib3",
    "pubnub>=10.4.1",
    "iam-rolesanywhere-session"
]

[tool.setuptools]
# Single-module package
py-modules = ["noc_agent"]
include-package-data = true

[tool.setuptools.package-data]
noc_agent = [
    "includes/*",
    "includes/**/*",
    "agent_config.json",
    "agent_config_template.json",
    "noc-agent.service"
]

# Optional: installable CLI entry point
[project.scripts]
noc-agent = "noc_agent:main"
